Updated code to return albums specific for given artist_id.